--- a/android/common/build.gradle
+++ b/android/common/build.gradle
@@ -11,6 +11,9 @@ android {
         targetSdkVersion 27
         multiDexEnabled true
     }
+    packagingOptions {
+        exclude 'META-INF'
+    }
 }
 
 repositories {
@@ -22,14 +25,16 @@ repositories {
 dependencies {
     api project(':common-client-jvm')
     api dep.multidex
-    api dep.kotlin_stdlib_jre7
-    api dep.kotlin_reflect
     api dep.android_support
+    api dep.kotlin_stdlib_jre7
+    api dep.klogging_jvm
+    api dep.kotlin_reflect
+    api dep.coroutines_jvm
+    api dep.coroutines_android
     api dep.kotlin_extensions
     api dep.anko
-
     implementation dep.glide
-    api fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(include: ['*.jar'], dir: 'libs')
 }
 
 apply from: '../androidconfig.gradle'
