--- a/common-jvm/build.gradle
+++ b/common-jvm/build.gradle
@@ -5,6 +5,8 @@ dependencies {
     expectedBy project(':common')
 
     implementation dep.kotlin_stdlib_jre8
+    implementation dep.klogging_jvm
+    implementation dep.kotlin_reflect
     implementation dep.retrofit
     implementation dep.kotlin_serialization_jvm
     implementation dep.gson
