--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,5 +4,6 @@ apply plugin: 'kotlinx-serialization'
 dependencies {
     implementation dep.kotlin_stdlib_common
     implementation dep.serialization_common
+    implementation dep.klogging_common
     testImplementation dep.kotlin_test_common
 }
