--- a/common/properties/strings.properties
+++ b/common/properties/strings.properties
@@ -1,5 +1,8 @@
+EMPTY_ANSWER=🤔
 GREETING=What do you want to do?
 HELLO=Hi! I'm Zenkai, your personal assistant.
 INPUT_TEXT_HINT=Type a message
 MICROPHONE_DISABLED=Microphone is disabled
+TIMEOUT=I'm sorry, can you repeat it?
+TRY_AGAIN=Try again
 TTS_ERROR=Error with voice synthesizer service
