Tokens a Shared Preferences & Best Voice interaction

--- a/common/properties/strings.properties
+++ b/common/properties/strings.properties
@@ -1,6 +1,7 @@
 EMPTY_ANSWER=🤐
 INPUT_TEXT_HINT=Type a message
 MICROPHONE_DISABLED=Microphone is disabled
+SHARE=Share via
 SPEAK_NOW=Speak
 TIMEOUT=I'm sorry, can you repeat it?
 TRY_AGAIN=Try again
