--- a/common/properties/strings.properties
+++ b/common/properties/strings.properties
@@ -1,6 +1,8 @@
 EMPTY_ANSWER=🤐
 INPUT_TEXT_HINT=Type a message
 MICROPHONE_DISABLED=Microphone is disabled
+NO_GREETINGS=Hi! I'm Zenkai, your personal assistant.\nI would be glad to help you, but you need to enable the network connection first. Make sure that Wi-Fi or mobile data is turned on.
+NO_NETWORK=Can't connect with Zenkai. Check your Internet connection.
 SHARE=Share via
 SPEAK_NOW=Speak
 TIMEOUT=I'm sorry, can you repeat it?
